fixed width of responsive navbar so it aligns with text properly

--- a/assets/bootstrap/css/bootstrap-responsive.css
+++ b/assets/bootstrap/css/bootstrap-responsive.css
@@ -968,7 +968,7 @@
     padding: 5px;
   }
   .navbar .container {
-    width: auto;
+    width: 724px;
     padding: 0;
   }
   .navbar .brand {
